--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,10 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.5.1'
     annotationProcessor 'androidx.room:room-compiler:2.5.1'
     kapt 'androidx.room:room-compiler:2.5.1'
+
+    //Mais icones
+    implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
+
+    //coil
+    implementation("io.coil-kt:coil-compose:2.3.0")
 }
