--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,13 +17,14 @@
             android:label="@string/title_activity_home"
             android:theme="@style/Theme.Loginscreen" />
         <activity
-            android:name=".MainActivity"
+            android:name=".SingUp"
             android:screenOrientation="portrait"
             android:exported="false"
             android:label="@string/title_activity_sing_up"
             android:theme="@style/Theme.Loginscreen" />
         <activity
-            android:name=".SingUp"
+            android:name=".MainActivity"
+            android:screenOrientation="portrait"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Loginscreen">
